--- a/src/css/highlight-panel.css
+++ b/src/css/highlight-panel.css
@@ -2,5 +2,5 @@
 	grid-area: hl-panel;
 	text-align: center;
 	--hlw: min(calc(min(720px,100vw) - 50px - 2rem) / 4, 8rem);
-	--hlh: calc(6 / 8 * var(--hlw));
+	--hlh: calc(5.65 / 8 * var(--hlw));
 }
